fix lint errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,17 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "stonks-ai-py"
-version = "1.0.0"
-description = "A RAG (Retrieval-Augmented Generation) API using LlamaIndex, FAISS, and OpenAI's GPT-4o mini"
+version = "0.1.0"
+description = "RAG API with GPT-4o mini and PostgreSQL"
+readme = "README.md"
+requires-python = ">=3.8"
+license = {text = "MIT"}
 authors = [
     {name = "Your Name", email = "your.email@example.com"}
 ]
-readme = "README.md"
-requires-python = ">=3.8"
+keywords = ["rag", "ai", "openai", "postgresql", "llamaindex"]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
@@ -21,8 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Topic :: Scientific/Engineering :: Artificial Intelligence",
-    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
     "llama-index==0.13.0",
@@ -44,25 +45,30 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "black==23.11.0",
-    "isort==5.12.0",
-    "flake8==6.1.0",
-    "mypy==1.7.1",
-    "pytest==7.4.3",
-    "pytest-asyncio==0.21.1",
-    "pytest-cov==4.1.0",
-    "requests==2.31.0",
+    "black==25.1.0",
+    "flake8==7.3.0",
+    "isort==5.13.2",
+    "mypy==1.13.0",
+    "pytest==8.0.0",
+    "pytest-asyncio==0.24.0",
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/rag-ai-py"
-Repository = "https://github.com/yourusername/rag-ai-py"
-Documentation = "https://github.com/yourusername/rag-ai-py#readme"
-Issues = "https://github.com/yourusername/rag-ai-py/issues"
+Homepage = "https://github.com/yourusername/stonks-ai-py"
+Repository = "https://github.com/yourusername/stonks-ai-py"
+"Bug Tracker" = "https://github.com/yourusername/stonks-ai-py/issues"
+
+[project.scripts]
+rag-api = "run:main"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["*"]
+exclude = ["tests*", "venv*", ".venv*"]
 
 [tool.black]
 line-length = 88
-target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
+target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
 include = '\.pyi?$'
 extend-exclude = '''
 /(
@@ -82,8 +88,7 @@ extend-exclude = '''
 profile = "black"
 multi_line_output = 3
 line_length = 88
-known_first_party = ["rag_system"]
-sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
+known_first_party = ["rag_system", "app", "run"]
 
 [tool.mypy]
 python_version = "3.8"
@@ -99,13 +104,20 @@ warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
 strict_equality = true
+show_error_codes = true
 
 [[tool.mypy.overrides]]
 module = [
-    "llama_index.*",
     "openai.*",
-    "faiss.*",
+    "llama_index.*",
+    "fastapi.*",
     "uvicorn.*",
+    "pydantic.*",
+    "yfinance.*",
+    "matplotlib.*",
+    "seaborn.*",
+    "pg8000.*",
+    "pgvector.*",
 ]
 ignore_missing_imports = true
 
@@ -117,10 +129,8 @@ python_functions = ["test_*"]
 addopts = [
     "--strict-markers",
     "--strict-config",
-    "--cov=.",
-    "--cov-report=term-missing",
-    "--cov-report=html",
-    "--cov-report=xml",
+    "--verbose",
+    "--tb=short",
 ]
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
