--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ yfinance==0.2.28
 pandas==2.2.3
 matplotlib==3.8.2
 seaborn==0.13.0
+
+# Development dependencies
+black==25.1.0
+flake8==7.3.0
+isort==5.13.2
