--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,21 @@ pydantic==2.11.7
 openai==1.98.0
 python-dotenv==1.0.0
 pg8000==1.30.5
-yfinance==0.2.28
 pandas==2.2.3
-matplotlib==3.8.2
 seaborn==0.13.0
+sqlalchemy==2.0.42
+alembic==1.13.1
+
+# EDGAR XBRL dependencies
+sec-edgar-downloader==5.0.3
+python-xbrl==1.1.1
+requests==2.31.0
 
 # Development dependencies
 black==25.1.0
 flake8==7.3.0
 isort==5.13.2
+pre-commit==4.0.0
+mypy==1.13.0
+pytest==8.2.2
+pytest-cov==5.0.0
