--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,8 @@ alembic==1.13.1
 
 # EDGAR XBRL dependencies
 edgartools==4.8.0
-sec-edgar-downloader==5.0.3
-python-xbrl==1.1.1
+# sec-edgar-downloader==5.0.3
+# python-xbrl==1.1.1
 requests==2.31.0
 
 # Development dependencies
