--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,8 +129,7 @@ python_functions = ["test_*"]
 addopts = [
     "--strict-markers",
     "--strict-config",
-    "--verbose",
-    "--tb=short",
+    "--tb=line",
 ]
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
