--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,10 @@ sqlalchemy==2.0.42
 alembic==1.13.1
 
 # EDGAR XBRL dependencies
-edgartools==4.12.2
+edgartools==4.14.2
 # sec-edgar-downloader==5.0.3
 # python-xbrl==1.1.1
+yfinance==0.2.66
 requests==2.31.0
 
 # Development dependencies
